--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,25 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="dialog" parent="android:style/Theme.Dialog">
+        <!-- 透明背景 -->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!-- 无边框 -->
+        <item name="android:windowFrame">@null</item>
+        <!-- 是否没有标题 -->
+        <item name="android:windowNoTitle">true</item>
+        <!-- 是否浮现在activity之上 -->
+        <item name="android:windowIsFloating">true</item>
+        <!-- 是否半透明 -->
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
+    <!-- 对话框开启和关闭的动画 -->
+    <style name="style_item" parent="android:Animation">
+        <!-- 从屏幕底部弹出 -->
+        <item name="@android:windowEnterAnimation">@anim/dialog_enter</item>
+        <!-- 从弹出的位置收回 -->
+        <item name="@android:windowExitAnimation">@anim/dialog_exit</item>
+    </style>
+
 </resources>
